--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   simple_gradient_text: ^1.2.4
   grouped_list: ^5.1.2
   internet_connection_checker:
+  flutter_localizations:
+    sdk: flutter
+  localization:
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
